[package]
name = "telemetry_stormworks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
eframe = "0.20.1"
egui = "0.20.1"
egui_extras = "0.20.0"
egui_glow = "0.20.1"
hyper = { version = "0.14.23", features = ["full"] }
once_cell = "1.17.0"
serde = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["sync", "rt-multi-thread"] }
url = "2.3.1"
